force-app/main/default/objects/FieldConditions__c/FieldConditions__c.object-meta.xml
<CustomObject>
    <label>FieldConditions</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Field Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FieldConditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>