force-app/main/default/objects/FieldConditions__c/fields/EditCondition__c.field-meta.xml
<CustomField>
    <fullName>EditCondition__c</fullName>
    <label>Edit Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>