force-app/main/default/objects/FieldConditions__c/fields/MandatoryCondition__c.field-meta.xml
<CustomField>
    <fullName>MandatoryCondition__c</fullName>
    <label>Mandatory Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>