force-app/main/default/objects/FieldConditions__c/fields/NewCondition__c.field-meta.xml
<CustomField>
    <fullName>NewCondition__c</fullName>
    <label>New Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>