force-app/main/default/objects/FieldConditions__c/fields/RelatedLIstUniqueName__c.field-meta.xml
<CustomField>
    <fullName>RelatedLIstUniqueName__c</fullName>
    <label>Related LIst Unique Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>