force-app/main/default/objects/FieldConditions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>FieldName__c</columns>
    <columns>HiddenCondition__c</columns>
    <columns>ReadOnlyCondition__c</columns>
    <columns>MandatoryCondition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>